tests/fail/elaboration/unification/mismatch/let-def-ann.fathom
//~ exit-code = 1

let x : Type : U32 = {};

x
